--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <div class="carousel-item large right">Cuadro grande derecha</div>
     </section>
     
+    <button onclick="pedirDatos()" id="pedirdatos">Pedir Datos</button>
+    <p id="resultado"></p>
+    
+    <script src="cliente.js"></script>
 
 
     <script src="Assets/scripts/scripts.js"></script>
