--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="carousel-item large right">Cuadro grande derecha</div>
     </section>
     
-    <button onclick="pedirDatos()" id="pedirdatos">Pedir Datos</button>
+    <button onclick="pedirDatos()" id="getDataBtn">Pedir Datos</button>
     <p id="resultado"></p>
     
     <script src="cliente.js"></script>
